# Multiplayer-Game-of-Life

./: .gitignore  CMakeLists.txt  CMakePresets.json  MakeFile  README.md  README_new.md  imgui.ini  out  vcpkg-configuration.json  vcpkg.json
src/: AIPlayer.cpp  AIPlayer.hpp  Board.cpp  Board.hpp  Cell.cpp  Cell.hpp  GUI.cpp  GUI.hpp  GameSession.cpp  GameSession.hpp  GameWindow.cpp  GameWindow.hpp  NetworkClient.cpp  NetworkClient.hpp  main.cpp
